Fix overflow on smaller screens

--- a/src/Components/massFormatter/MassFormatter.css
+++ b/src/Components/massFormatter/MassFormatter.css
@@ -1,4 +1,6 @@
 #main {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
