--- a/src/Components/massFormatter/RightPanel/RightPanel.css
+++ b/src/Components/massFormatter/RightPanel/RightPanel.css
@@ -2,7 +2,7 @@
     margin: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     max-width: 300px;
 }
 
