--- a/src/Components/massFormatter/TextAreas.css
+++ b/src/Components/massFormatter/TextAreas.css
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: column;
 }
+
+textarea {
+    margin: 5px 5px 5px 0;
+    width: 40vw;
+    height: 45%;
+}
